Fix: update visibility memory

--- a/assets/styles/2-objects/_objects-section.scss
+++ b/assets/styles/2-objects/_objects-section.scss
@@ -5,8 +5,8 @@
 // -----------------------------------------------------------------------------
 
 .o-section {
-  margin-top: 32px;
-  margin-bottom: 32px;
+  padding-top: 32px;
+  padding-bottom: 32px;
 }
 
 .o-section__head {
